# fastpi-celery-tdd

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  worker-start.sh
app/: config.py  main.py
src/: celery_factory.py  config.py  main.py
src/api/v1/: order.py
src/model/: __init__.py  product.py
src/service/: __init__.py  order.py  product.py
tests/: test_main.py
tests/api/: conftest.py
tests/api/v1/order/: test_order.py
tests/service/: test_product.py
